Rewrote some of the command functions, hit an issue with packet networking

--- a/src/main/resources/assets/allomancy/lang/en_us.json
+++ b/src/main/resources/assets/allomancy/lang/en_us.json
@@ -46,6 +46,24 @@
     "item.allomancy.bronze_ingot": "Bronze Ingot",
     "item.allomancy.steel_ingot": "Steel Ingot",
     "item.allomancy.pewter_ingot": "Pewter Ingot",
+    
+    "item.allomancy.iron_metal_mind": "Iron Metal Mind",
+    "item.allomancy.steel_metal_mind": "Steel Metal Mind",
+    "item.allomancy.tin_metal_mind": "Tin Metal Mind",
+    "item.allomancy.pewter_metal_mind": "Pewter Metal Mind",
+    "item.allomancy.zinc_metal_mind": "Zinc Metal Mind",
+    "item.allomancy.brass_metal_mind": "Brass Metal Mind",
+    "item.allomancy.copper_metal_mind": "Copper Metal Mind",
+    "item.allomancy.bronze_metal_mind": "Bronze Metal Mind",
+    
+    "item.allomancy.zinc_nugget": "Zinc Nugget",
+    "item.allomancy.lead_nugget": "Lead Nugget",
+    "item.allomancy.tin_nugget": "Tin Nugget",
+    "item.allomancy.copper_nugget": "Copper Nugget",
+    "item.allomancy.brass_nugget": "Brass Nugget",
+    "item.allomancy.bronze_nugget": "Bronze Nugget",
+    "item.allomancy.steel_nugget": "Steel Nugget",
+    "item.allomancy.pewter_nugget": "Pewter Nugget",
 
     "metals.iron" : "Iron",
     "metals.steel": "Steel",
@@ -59,10 +77,16 @@
     "advancements.become_mistborn.title": "Become Mistborn!",
     "advancements.become_mistborn.desc": "You have a power most people envy...",
 
-    "key.categories.allomancy": "Allomancy",
+    "key.categories.allomancy": "Metallic Arts",
     "key.burn": "Burn Metals",
     "key.flare": "Flare Metals",
     "key.selection": "Selection Wheel",
+    "key.mark": "Mark Select Block",
+    "key.mind": "Increase/Decrease Metalmind Strength",
+    "key.activeIron": "Activate Iron",
+    "key.activeSteel": "Activate Steel",
+    "key.activeZinc": "Activate Zinc",
+    "key.activeBrass": "Activate Brass",
 
     "commands.allomancy.getpower": "%s currently has Allomantic power %s",
     "commands.allomancy.setpower": "%s set to Allomantic power %s",
